[metadata]
name = config-mixin
url = https://github.com/stephanerobert/config-mixin
author = Stephane Robert
author-email = stephane.robert@gmail.com
summary = Auto-discovery of configurations for easy inline use
description-file =
    README.md
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.12

[files]
packages =
    config_mixin

[bdist_wheel]
universal = 1
